--- a/docker/todo-app/tests/Dockerfile
+++ b/docker/todo-app/tests/Dockerfile
@@ -1,1 +1,10 @@
 
+FROM mjgargani/puppeteer:trybe1.0 AS todotests
+
+WORKDIR /docker
+
+ADD node_modules.tar.gz ./
+
+COPY . .
+
+CMD [ "npm test" ]
